added about me page

--- a/index.html
+++ b/index.html
@@ -63,18 +63,49 @@
                 <span>I'm Aryan Choudhary</span>
                 <p>
                     I am a highly motivated teenager who loves to code, and well
-                    versed with the with Web Development sills
+                    versed with the with problem solving skills
                 </p>
                 <div class="icons">
-                    <a href="#" title=""><i class="fab fa-github"></i></a>
-                    <a href="#" title=""><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" title=""
+                    <a href="#" title="Github"><i class="fab fa-github"></i></a>
+                    <a href="#" title="Linkedin"
+                        ><i class="fab fa-linkedin-in"></i
+                    ></a>
+                    <a href="#" title="Stackoverflow"
                         ><i class="fab fa-stack-overflow"></i
                     ></a>
                 </div>
             </div>
 
             <a href="#about" title=""
+                ><i class="far fa-arrow-alt-circle-down"></i
+            ></a>
+        </section>
+        <section class="about" id="about">
+            <div class="image">
+                <img src="./images/aryan.jpg" alt="Aryan" />
+            </div>
+            <div class="info-about">
+                <h3>About Me</h3>
+                <p>
+                    I am a hustler who likes to code for most of the time of my
+                    day. I am a self-taught coder, currently, I am pursuing a
+                    Bachelor's in Computer Applications. I am a rational thinker
+                    and I very good at logics and I am a fast learner I grab
+                    concepts very quickly. I am a punctual person of good work
+                    ethics and I believe in meeting my deadlines on time. My
+                    hobbies are coding, watching web series in my free time, I
+                    love reading books
+                </p>
+                <h3>Contact Details</h3>
+                <p>
+                    Aryan Choudhary<br />Ambala Cantt.<br />Haryana-133001<br />+91
+                    88590 40838
+                </p>
+                <span style="color: white; font-size: 1.5em;"
+                    >sep2001aryan@yahoo.com</span
+                >
+            </div>
+            <a href="#Resume" title=""
                 ><i class="far fa-arrow-alt-circle-down"></i
             ></a>
         </section>
