--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                     versed with the with problem solving skills
                 </p>
                 <div class="icons">
-                    <a href="#" title="Github"><i class="fab fa-github"></i></a>
-                    <a href="#" title="Linkedin"
+                    <a href="https://github.com/sep2001aryan" title="Github"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/aryan-choudhary-a00445197/" title="Linkedin"
                         ><i class="fab fa-linkedin-in"></i
                     ></a>
-                    <a href="#" title="Stackoverflow"
+                    <a href="https://stackoverflow.com/users/13006519/aryan-choudhary" title="Stackoverflow"
                         ><i class="fab fa-stack-overflow"></i
                     ></a>
                 </div>
